# Assessment-de-Prontid-o-em-IA

./: .env.example  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_user_name.py
backend/app/: aggregation.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  scoring.py  scoring_service.py  security.py  seed.py
backend/app/routers/: auth.py  dashboard.py  forms.py  people.py
backend/tests/integration/: conftest.py  payloads.py  test_auth_and_forms.py  test_auth_me.py  test_dashboard_company_isolation.py  test_form1_result.py  test_people.py
backend/tests/unit/: test_aggregation.py  test_scoring.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: NavBar.jsx  QuestionField.jsx
frontend/src/formSchemas/: form1.js  form2.js
frontend/src/pages/: DashboardPage.jsx  Form1Page.jsx  Form2Page.jsx  LoginPage.jsx  PeoplePage.jsx
specs/01-scoring/: requirements.md  scoring.feature
specs/02-auth-perfis/: auth.feature  requirements.md
specs/03-agregacao-dashboard/: dashboard.feature  requirements.md
